Forgot a few updates to move the WiFi reset to MIO[7]

--- a/configs/meta-user/ultra96v2_valtest/recipes-bsp/device-tree/files/system-user.dtsi
+++ b/configs/meta-user/ultra96v2_valtest/recipes-bsp/device-tree/files/system-user.dtsi
@@ -4,8 +4,8 @@
    /* WILC3000 module: release RESETN on kernel boot */  
    sdhci1_pwrseq: sdhci1_pwrseq {
       compatible = "mmc-pwrseq-simple";
-      /* reset-gpios = <&gpio 7 1>;  // MIO[7] for RESETN, Active low, JT5 strapped to pins 2-3 */
-      reset-gpios = <&gpio 78 1>;  // device pin A3 for RESETN, Active low, JT5 strapped to pins 1-2
+      reset-gpios = <&gpio 7 1>;  // MIO[7] for RESETN, Active low, JT5 strapped to pins 2-3
+      /* reset-gpios = <&gpio 78 1>;  // device pin A3 for RESETN, Active low, JT5 strapped to pins 1-2 */
       post-power-on-delay-ms = <10>;
    };
 
