Updates for Ultra96V2 OOB BSP

--- a/configs/meta-user/ultra96v2_oob/conf/petalinuxbsp.conf
+++ b/configs/meta-user/ultra96v2_oob/conf/petalinuxbsp.conf
@@ -21,3 +21,8 @@ MACHINE_FEATURES_remove_ultra96-zynqmp = "mipi"
 DISTRO_FEATURES_append = " bluez5 dbus"
 
 PREFERRED_VERSION_wilc-firmware = "15.2"
+
+PREMIRRORS_prepend = " git://.*/.* file:///tools/Xilinx/PetaLinux/2019.2/downloads_2019.2/downloads \n \
+ftp://.*/.* file:///tools/Xilinx/PetaLinux/2019.2/downloads_2019.2/downloads \n \
+http://.*/.* file:///tools/Xilinx/PetaLinux/2019.2/downloads_2019.2/downloads \n \
+https://.*/.* file:///tools/Xilinx/PetaLinux/2019.2/downloads_2019.2/downloads \n"
