Continued updates to add Vitis-AI support to Ultra96-V2 and UltraZed SOMs

--- a/configs/meta-user/ultra96v2_oob/conf/petalinuxbsp.conf
+++ b/configs/meta-user/ultra96v2_oob/conf/petalinuxbsp.conf
@@ -22,3 +22,9 @@ DISTRO_FEATURES_append = " bluez5 dbus"
 
 PREFERRED_VERSION_wilc-firmware = "15.2"
 
+# Leave this here for the end-user to enable if desired
+# Leave it up to the end user to accept the commercial license
+# https://forums.xilinx.com/t5/Embedded-Linux/ultra96-simple-video-opencv-error/td-p/929052
+# IMAGE_INSTALL_append = " gstreamer1.0-libav"
+# LICENSE_FLAGS_WHITELIST_append = " commercial_gstreamer1.0-libav"
+
