--- a/configs/meta-user/uz3eg_pciec/conf/petalinuxbsp.conf
+++ b/configs/meta-user/uz3eg_pciec/conf/petalinuxbsp.conf
@@ -13,3 +13,10 @@ IMAGE_CLASSES_remove = "image-types-xilinx-qemu qemuboot-xilinx"
 IMAGE_FSTYPES_remove = "wic.qemu-sd"
 
 EXTRA_IMAGEDEPENDS_remove = "qemu-helper-native virtual/boot-bin"
+
+# Leave this here for the end-user to enable if desired
+# Leave it up to the end user to accept the commercial license
+# https://forums.xilinx.com/t5/Embedded-Linux/ultra96-simple-video-opencv-error/td-p/929052
+# IMAGE_INSTALL_append = " gstreamer1.0-libav"
+# LICENSE_FLAGS_WHITELIST_append = " commercial_gstreamer1.0-libav"
+
