minized: allow dropbear recipe modifications

--- a/configs/meta-user/minized_emmc_enhanced/conf/petalinuxbsp.conf
+++ b/configs/meta-user/minized_emmc_enhanced/conf/petalinuxbsp.conf
@@ -27,4 +27,4 @@ DISTRO_FEATURES_append = " wifi bluetooth bluez5 dbus pulseaudio"
 PREFERRED_VERSION_hostapd = "2.6"
 PREFERRED_VERSION_wpa-supplicant = "2.6"
 
-
+SIGGEN_UNLOCKED_RECIPES += "dropbear"
