mz: apply ftpd and dropbear fixes from minized
Apply the sames fixes on ftpd and dropbear, done on minized:

https://github.com/Avnet/petalinux/commit/20a389977ae55cec2cbb57836418e911a82f0bae

--- a/configs/meta-user/mz_fmccc/conf/petalinuxbsp.conf
+++ b/configs/meta-user/mz_fmccc/conf/petalinuxbsp.conf
@@ -13,3 +13,5 @@ IMAGE_CLASSES_remove = "image-types-xilinx-qemu qemuboot-xilinx"
 IMAGE_FSTYPES_remove = "wic.qemu-sd"
 
 EXTRA_IMAGEDEPENDS_remove = "qemu-helper-native virtual/boot-bin"
+
+SIGGEN_UNLOCKED_RECIPES += "dropbear"
