--- a/configs/meta-user/pz_fmc2/conf/petalinuxbsp.conf
+++ b/configs/meta-user/pz_fmc2/conf/petalinuxbsp.conf
@@ -13,3 +13,5 @@ IMAGE_CLASSES_remove = "image-types-xilinx-qemu qemuboot-xilinx"
 IMAGE_FSTYPES_remove = "wic.qemu-sd"
 
 EXTRA_IMAGEDEPENDS_remove = "qemu-helper-native virtual/boot-bin"
+
+SIGGEN_UNLOCKED_RECIPES += "dropbear"
