uz3eg_pciec: support hwmon irps5401
Backported patches from xlnx-rebase-5.4:
    0001-hwmon-pmbus-associate-PMBUS_SKIP_STATUS_CHECK-with-d
    0002-hwmon-pmbus-Fix-page-count-auto-detection
    0003-hwmon-pmbus-Add-Infineon-IRPS5401-driver

Updated kernel recipe, kernel config and device tree

--- a/configs/meta-user/uz3eg_pciec/recipes-bsp/device-tree/files/system-user.dtsi
+++ b/configs/meta-user/uz3eg_pciec/recipes-bsp/device-tree/files/system-user.dtsi
@@ -23,7 +23,7 @@
 	clock-frequency = <400000>;
 
 	i2cswitch@70 { /* U7 on UZ3EG SOM */
-		compatible = "nxp,pca9542";
+		compatible = "nxp,pca9543";
 		#address-cells = <1>;
 		#size-cells = <0>;
 		reg = <0x70>;
@@ -35,6 +35,27 @@
 			eeprom@51 { /* U5 on UZ3EG IOCC and U7 on the UZ7EV EVCC*/
 				compatible = "at,24c08";
 				reg = <0x51>;
+			};
+		};
+
+		i2c@1 {
+			#address-cells = <0x1>;
+			#size-cells = <0x0>;
+			reg = <0x1>;
+
+			irps5401@43 {
+				compatible = "infineon,irps5401";
+				reg = <0x43>;
+			};
+
+			irps5401@44 {
+				compatible = "infineon,irps5401";
+				reg = <0x44>;
+			};
+
+			irps5401@45 {
+				compatible = "infineon,irps5401";
+				reg = <0x45>;
 			};
 		};
 	};
