Adjusted gitignore, removed erroneous scripts, tidy interaction with HDL repo, now that 'projects' folder is created instead of inherited from repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore everything in this directory
 scripts/vitis_*_Makefile
+scripts/*.jou
+scripts/*.log
 projects/
 # Except this file
 !.gitignore
